style(java): standardize Javadoc parameter formatting and update Java version
- Standardized Javadoc @param formatting with consistent spacing across all contract classes
- Updated Java version from 21 to 17 in pom.xml compiler configuration
- Changed List.<TokenOccurrence>of() to List.of() in processor scan methods
- Replaced rows.getFirst() with rows.get(0) for better compatibility
- Converted switch expression to if-else chain in PoiWorkbookProcessor for value handling
- Improved Javadoc formatting in various processor and utility classes
- Incremented project version from 0.0.1 to 0.0.2 in pom.xml